--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/svelte": "^7.0.2",
     "@astrojs/tailwind": "^5.1.4",
     "astro": "^5.1.1",
-    "tailwindcss": "^3.4.17"
+    "svelte": "^5.15.0",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^8.18.2",
